<?xml version="1.0" encoding="utf-8"?>
<com.github.florent37.shapeofview.shapes.RoundRectView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    app:shape_roundRect_topLeftRadius="20dp"
    app:shape_roundRect_topRightRadius="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:alpha="100"
                android:gravity="center"
                android:text="@string/MSG_DELETE_FILE"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/colorLightGrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_positive"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/BTN_YES"
                    android:textColor="#CA2216"
                    android:textSize="14sp"
                    android:typeface="monospace" />

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@color/colorLightGrey" />

                <TextView
                    android:id="@+id/btn_negative"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/BTN_NO"
                    android:textColor="#515151"
                    android:textSize="14sp"
                    android:typeface="monospace" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</com.github.florent37.shapeofview.shapes.RoundRectView>
