<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorWhite">

            <ImageView
                android:id="@+id/tb_close"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:src="@drawable/ic_close_black"/>

            <TextView
                android:id="@+id/tb_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/TITLE_FILTERS"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif"/>

            <ImageView
                android:id="@+id/tb_done"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                android:src="@drawable/done_2"/>

            <TextView
                android:id="@+id/tb_filter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:clickable="true"
                android:gravity="left|center"
                android:paddingLeft="15dp"
                android:text="@string/app_name"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="invisible" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/shadow_up" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:scaleType="centerInside" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/shadow_bottom" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_menu_filters"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorWhite" />

            <LinearLayout
                android:id="@+id/ll_seekbar_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:clickable="true"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/seekbar_container"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_cancel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/BTN_CANCEL"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="2dp"
                        android:background="@color/colorLightGrey"/>


                    <TextView

                        android:id="@+id/tv_done"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/BTN_DONE"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorBlack"/>

                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


    </LinearLayout>

    <include
        android:id="@+id/wg_flt_loading"
        layout="@layout/wg_loading"
        android:visibility="gone" />
</RelativeLayout>
