<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="280dp"
    android:background="@drawable/dig_base_2"
    android:clickable="true"
    android:orientation="vertical"
    android:layout_centerInParent="true"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="5dp">

        <androidx.cardview.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/btn_standard"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:padding="2dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/BTN_STANDARD"
                    android:textAllCaps="true"
                    android:typeface="monospace"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="bottom"
                    android:background="@color/colorBlack" />

            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/btn_medium"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:padding="2dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/BTN_MEDIUM"
                    android:textAllCaps="true"
                    android:typeface="monospace"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="bottom"
                    android:background="@color/colorBlack" />

            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/btn_high"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="2dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="2dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/BTN_HIGH"
                    android:textAllCaps="true"
                    android:typeface="monospace"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_gravity="bottom"
                    android:background="@color/colorBlack" />

            </FrameLayout>
        </androidx.cardview.widget.CardView>

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->

<!--            <com.github.florent37.shapeofview.shapes.RoundRectView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_margin="10dp"-->
<!--                android:layout_weight="1"-->
<!--                app:shape_roundRect_bottomLeftRadius="10dp"-->
<!--                app:shape_roundRect_bottomRightRadius="10dp"-->
<!--                app:shape_roundRect_topLeftRadius="10dp"-->
<!--                app:shape_roundRect_topRightRadius="10dp">-->

<!--                <TextView-->
<!--                    android:id="@+id/btn_standard"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:background="@color/colorBlack"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/BTN_STANDARD"-->
<!--                    android:textColor="@color/colorWhite"-->
<!--                    android:textSize="14sp" />-->
<!--            </com.github.florent37.shapeofview.shapes.RoundRectView>-->

<!--            <com.github.florent37.shapeofview.shapes.RoundRectView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_margin="10dp"-->
<!--                android:layout_weight="1"-->
<!--                app:shape_roundRect_bottomLeftRadius="10dp"-->
<!--                app:shape_roundRect_bottomRightRadius="10dp"-->
<!--                app:shape_roundRect_topLeftRadius="10dp"-->
<!--                app:shape_roundRect_topRightRadius="10dp">-->

<!--                <TextView-->
<!--                    android:id="@+id/btn_medium"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:background="@color/colorBlack"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/BTN_MEDIUM"-->
<!--                    android:textColor="@color/colorWhite"-->
<!--                    android:textSize="14sp" />-->
<!--            </com.github.florent37.shapeofview.shapes.RoundRectView>-->

<!--            <com.github.florent37.shapeofview.shapes.RoundRectView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_margin="10dp"-->
<!--                android:layout_weight="1"-->
<!--                app:shape_roundRect_bottomLeftRadius="10dp"-->
<!--                app:shape_roundRect_bottomRightRadius="10dp"-->
<!--                app:shape_roundRect_topLeftRadius="10dp"-->
<!--                app:shape_roundRect_topRightRadius="10dp">-->

<!--                <TextView-->
<!--                    android:id="@+id/btn_high"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    android:layout_weight="1"-->
<!--                    android:background="@color/colorBlack"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/BTN_HIGH"-->
<!--                    android:textColor="@color/colorWhite"-->
<!--                    android:textSize="14sp" />-->
<!--            </com.github.florent37.shapeofview.shapes.RoundRectView>-->
<!--        </LinearLayout>-->

    </LinearLayout>

</RelativeLayout>
